# sqlrelay_rudiments

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  NEWS  TODO  aclocal.m4  acsite.m4  autogen.sh  config.guess  config.mk.in  config.sub  config.windows.mk  config_vms.mk  config_windows.mk  configure  configure.com  configure.in  configure.js  configure.vbs  cp.vbs  features.mk  features.mk.in  make.bat  make.batch  makeclean.batch  makeinstall.batch  makeuninstall.batch  mkinstalldirs  rm.vbs  rmtree.bat  rmtree.vbs  rudiments.kdevprj  rudiments.pc.in  rudiments.spec  rudiments.spec.in.in  vmsclean.sh
bench/: Makefile  array.cpp  buffers.cpp  bytebuffer.cpp  deque.cpp  dictionary.cpp  dynamicarray.cpp  forward_list.cpp  inetsocketclient.cpp  inetsocketserver.cpp  linkedlist.cpp  list.cpp  lists.cpp  map.cpp  maps.cpp  memorypool.cpp  randomnumber.cpp  singlylinkedlist.cpp  staticarray.cpp  string.cpp  stringbuffer.cpp  vector.cpp
debian/: README.debian  changelog  control  copyright  dirs  files  librudiments-0.25-1-dev.files  librudiments-0.25-1-doc.files  librudiments-0.25-1.files  rules
doc/: Makefile  guide.html  index.html  installing.html  introduction.html  prerequisites.html  reference.html
doc/classes/: character.h.html  charstring.h.html  chat.h.html  client.h.html  clientserverfactory.h.html  clientsocket.h.html  commandline.h.html  connectstring.h.html  container.h.html  crypt.h.html  daemonprocess.h.html  datatransport.h.html  datatransportfactory.h.html  datetime.h.html  device.h.html  dictionary.h.html  directory.h.html  directorylisting.h.html  doxygen.config  dtd.h.html  dynamiclib.h.html  environment.h.html  error.h.html  errorhandler.h.html  file.h.html  filedescriptor.h.html  filesystem.h.html  groupentry.h.html  hostentry.h.html  inetclientsocket.h.html  inetserversocket.h.html  inetsocketutil.h.html  intervaltimer.h.html  link.h.html  linkedlist.h.html  list.h.html  listener.h.html  logger.h.html  loginrecord.h.html  math.h.html  (+47 more)
doc/classes/html/: annotated.html  avltree_8h_source.html  avltreeincludes_8h_source.html  avltreeinlines_8h_source.html  avltreenode_8h_source.html  bytebuffer_8h_source.html  bytebufferincludes_8h_source.html  bytestring_8h_source.html  bytestringincludes_8h_source.html  character_8h_source.html  characterincludes_8h_source.html  charstring_8h_source.html  charstringincludes_8h_source.html  chat_8h_source.html  chatincludes_8h_source.html  classavltree-members.html  classavltree.html  (+717 more)
doc/css/: styles.css
doc/features/: betterc.html  compatibility.html  datastructures.html  frameworks.html  lightweight.html  utilityclasses.html
doc/programming/: Makefile  avltree.html  avltree.html.in  baseclasses.html  baseclasses.html.in  bytebuffer.html  bytebuffer.html.in  bytestring.html  bytestring.html.in  character.html  character.html.in  charstring.html  charstring.html.in  chat.html  chat.html.in  codetree.html  codetree.html.in  commandline.html  commandline.html.in  compiler.html  compiler.html.in  crypt.html  crypt.html.in  datetime.html  datetime.html.in  device.html  device.html.in  dictionary.html  dictionary.html.in  directory.html  directory.html.in  dtd.html  dtd.html.in  dynamicarray.html  dynamicarray.html.in  dynamiclib.html  dynamiclib.html.in  environment.html  environment.html.in  error.html  (+108 more)
examples/: Makefile  bytebuffer.cpp  bytestring-compare.cpp  bytestring-copy.cpp  bytestring-find.cpp  cat.cpp  character-inset.cpp  character-isxxx.cpp  character-toxxx.cpp  charstring-compare.cpp  charstring-copy.cpp  charstring-encode.cpp  charstring-find.cpp  charstring-numbers.cpp  charstring-split.cpp  charstring-transform.cpp  commandline.cpp  crypt.cpp  datetime-basic.cpp  datetime-init.cpp  datetime-math.cpp  datetime-tz.cpp  dictionary-const.cpp  dictionary-nonconst.cpp  environment.cpp  error.cpp  file-buffers.cpp  file-convenience.cpp  file-create.cpp  file-getprops.cpp  file-open.cpp  file-random.cpp  file-read.cpp  file-readline.cpp  file-remove.cpp  file-truncate.cpp  file-write.cpp  groupentry.cpp  halt.cpp  hostentry-address.cpp  (+52 more)
include/: Makefile  Makefile.in
include/rudiments/: avltree.h  binarytree.h  bytebuffer.h  bytestring.h  character.h  charstring.h  chat.h  client.h  clientserverfactory.h  clientsocket.h  codetree.h  commandline.h  compiler.h  connectiondata.h  connectstring.h  container.h  crypt.h  daemonprocess.h  datatransport.h  datatransportfactory.h  datetime.h  debugprint.h  device.h  dictionary.h  directory.h  directorylisting.h  dtd.h  dynamicarray.h  dynamiclib.h  encryption.h  environment.h  error.h  errorhandler.h  file.h  filedescriptor.h  fileproperties.h  filesystem.h  groupentry.h  gss.h  gssapi.h  (+90 more)
man/: Makefile  rudiments-config.1
msvc/: librudiments.sln  librudiments.vcxproj  librudiments.vcxproj.filters  rudiments.sln
msvc/setupx64/: setupx64.sln  setupx64.vdproj
msvc/setupx86/: setupx86.sln  setupx86.vdproj
spec/: rudiments.centos.spec
src/: Makefile  Makefile.in  baselinkedlist.cpp  bytebuffer.cpp  bytestring.cpp  character.C  character.cpp  charstring.C  charstring.cpp  chat.C  chat.cpp  client.C  client.cpp  clientserverfactory.C  clientserverfactory.cpp  clientsocket.C  clientsocket.cpp  codetree.cpp  commandline.C  commandline.cpp  compiler.cpp  connectiondata.C  connectstring.C  container.C  crypt.C  crypt.cpp  daemonprocess.C  daemonprocess.cpp  datatransport.C  datatransportfactory.C  datetime.C  datetime.cpp  device.C  device.cpp  dictionary.C  directory.C  directory.cpp  dtd.C  dtd.cpp  dynamiclib.C  (+145 more)
test/: Makefile  avltree.cpp  binarytree.cpp  bytebuffer.cpp  bytestring.cpp  bytestringbench.cpp  character.C  character.cpp  charstring.C  charstring.cpp  cmdline.C  commandline.cpp  connstr.C  crypt.cpp  daemon.cpp  daemonprocess.C  daemonprocess.cpp  datetime.C  datetime.cpp  dict.C  dictionary.C  dictionary.cpp  dir.C  directory.cpp  dmn.C  dtd.C  dtd.cpp  dtd.dtd  dynamicarray.cpp  dynamiclib.cpp  env.C  environment.cpp  err.C  error.cpp  file.C  file.cpp  filesystem.C  filesystem.cpp  group.C  groupentry.cpp  (+155 more)
test/certificates/: Makefile  sign.sh
(+663 files in other folders)
